index.html file is updated

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Append Bootstrap Template</title>
+  <title>Hello all</title>
+  <h1>This is a sample bootstrap project</h1>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
